fix <section> tag misalignment

--- a/blocks/newsletter/newsletter.css
+++ b/blocks/newsletter/newsletter.css
@@ -3,10 +3,9 @@
 }
 
 .newsletter__container {
-  margin: 0;
   position: absolute;
-  margin: 0 -50px 0 -50px;
-  left: 25%;
+  margin: 0 auto;
+  left: 15%;
   top: -125px;
   max-width: max-content;
   background-color: white;
